[tool.poetry]
name = "coggy"
version = "0.1.0"
description = "Cognitive AI Lab Discord bot"
authors = ["Semlar <teslagraafs@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
start = "coggy:start"

[tool.poetry.dependencies]
python = "^3.9"
discord = "^2.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
